<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pieter.myapplication.home">

    <TextView
        android:id="@+id/score-tv"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category-tv"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Category" />

            <Spinner
                android:id="@+id/category-spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/categories"
                android:prompt="@string/category_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/difficulty-tv"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Difficulty" />

            <Spinner
                android:id="@+id/difficulty-spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/difficulties"
                android:prompt="@string/difficulty_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type-tv"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Type"
                tools:text="Type" />

            <Spinner
                android:id="@+id/type-spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/types"
                android:prompt="@string/type_prompt" />

        </LinearLayout>

        <Button
            android:id="@+id/start-button"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:onClick="play"
            android:text="@string/start" />

        <Button
            android:id="@+id/logout-button"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:onClick="logout"
            android:text="@string/log_out" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
